[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Images/House/Stairs_down.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Arrow.png" type="Texture" id=2]
[ext_resource path="res://Map/RoomAssets1/StaircaseD.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56.5, 49.5 )

[sub_resource type="Animation" id=2]
resource_name = "ArrowMove"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../ArrowSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -72 ), Vector2( 0, -62 ) ]
}

[node name="StaircaseD" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -39.5 )
shape = SubResource( 1 )

[node name="ArrowSprite" type="Sprite" parent="."]
position = Vector2( 0, -67 )
rotation = -3.14159
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowSprite"]
root_node = NodePath("../../Sprite")
anims/ArrowMove = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_StaircaseD_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_StaircaseD_body_exited"]
